# anchor

./: Cargo.toml  README.md
.github/: spellcheck.yml  wordlist.txt
anchor/client/src/: config.rs
anchor/common/ssv_network_config/built_in_network_configs/holesky/: ssv_domain_type.txt
anchor/common/ssv_network_config/src/: lib.rs
anchor/network/: Cargo.toml
anchor/network/src/: behaviour.rs  config.rs  discovery.rs  lib.rs  network.rs  types.rs
anchor/network/src/handshake/: behaviour.rs  codec.rs  envelope.rs  error.rs  mod.rs  node_info.rs  types.rs
anchor/network/src/handshake/envelope/: codec.rs  mod.rs
anchor/network/src/handshake/record/: envelope.rs  mod.rs  record.rs  signing.rs
anchor/network/src/peer_manager/: mod.rs  network_behaviour.rs
anchor/network/src/peer_manager/peerdb/: mod.rs  peer_info.rs  score.rs
anchor/network/src/types/: node_info.rs  ssv_message.rs
