[package]
name = "network"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[dependencies]
arbitrary = "1.4.1"
delay_map = "0.4"
dirs = { workspace = true }
discv5 = { workspace = true }
ethereum_serde_utils = "1.0.0-beta.0"
ethereum_ssz = "0.8.1"
ethereum_ssz_derive = "0.8.1"
futures = { workspace = true }
hex = "0.4.3"
itertools = "0.10.5"
libp2p = { version = "0.54", default-features = false, features = [
  "identify",
  "yamux",
  "noise",
  "secp256k1",
  "tcp",
  "tokio",
  "macros",
  "gossipsub",
  "quic",
  "ping",
] }
lighthouse_network = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
ssz_types = "0.10"
strum = "0.24.1"
task_executor = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }
version = { workspace = true }

[dev-dependencies]
async-channel = { workspace = true }
