[package]
name = "network"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[dependencies]
dirs = { workspace = true }
discv5 = { workspace = true }
ethereum_ssz = "0.8.1"
ethereum_ssz_derive = "0.8.1"
futures = { workspace = true }
hex = "0.4.3"
libp2p = { version = "0.54", default-features = false, features = [
  "identify",
  "yamux",
  "noise",
  "secp256k1",
  "tcp",
  "tokio",
  "macros",
  "gossipsub",
  "quic",
  "ping",
  "request-response",
] }
lighthouse_network = { workspace = true }
serde = { workspace = true }
ssz_types = "0.10"
subnet_tracker = { workspace = true }
task_executor = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }
version = { workspace = true }
serde_json = "1.0.137"
thiserror = "1.0.69"
prost = "0.13.4"
async-trait = "0.1.85"
rand = "0.8.5"
thiserror = "1.0.69"

[dev-dependencies]
async-channel = { workspace = true }
